fix contact page on mobile

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -60,11 +60,6 @@
     background-color: #333;
 }
 
-@media (max-width: 768px) {
-#contact-container {
-    text-align: center;
-}
-}
 #other-contact {
     width: 80%;
     margin: 1rem;
@@ -100,4 +95,16 @@
     display: flex;
     gap: 1rem;
     padding: 0;
+}
+
+@media (max-width: 768px) {
+    h1,
+    h2,
+    p {
+        text-align: center;
+    }
+
+    #mail-hours {
+        flex-direction: column;
+    }
 }
